<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:background="@color/peso_normal">

    <Button
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludar_app"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_app"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/btnTODO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TODO"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>