<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/todo_background_todo_app"
    tools:context=".todoapp.TodoActivity">
    <TextView
        android:id="@+id/tvTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/Bienvenido"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        style="@style/TodoSubtitle"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_tasks"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        style="@style/TodoSubtitle"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"/>

</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="32dp"
        app:fabSize="normal"
        android:backgroundTint="@color/todo_accent"
        app:tint="@color/white"
        android:layout_gravity="end|bottom"/>
</FrameLayout>